<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@drawable/dance4life_android_background_3">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="24dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp">

        <!-- AREA 1 -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/alert_area_1"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="150dp"
            app:cardBackgroundColor="@android:color/transparent"
            app:strokeColor="#FFFFFF"
            app:strokeWidth="1dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- AREA 2 -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/alert_area_2"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            app:cardBackgroundColor="@android:color/transparent"
            app:strokeColor="#FFFFFF"
            app:strokeWidth="1dp"
            app:layout_constraintTop_toBottomOf="@id/alert_area_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- AREA 3 -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/alert_area_3"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            app:cardBackgroundColor="@android:color/transparent"
            app:strokeColor="#FFFFFF"
            app:strokeWidth="1dp"
            app:layout_constraintTop_toBottomOf="@id/alert_area_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- URL (FIXO NO FUNDO) -->
        <LinearLayout
            android:id="@+id/url_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- ACC TITLE -->
        <TextView
            style="@style/TextTitle"
            android:id="@+id/acc_title"
            android:text="@string/accelerometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/accelerometer_x_label"
            app:layout_constraintTop_toBottomOf="@id/alert_area_3"
            app:layout_constraintStart_toStartOf="parent"/>

        <!-- ACC -->
        <TextView
            style="@style/TextLabel"
            android:id="@+id/accelerometer_x_label"
            android:text="@string/x"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/accelerometer_y_label"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            style="@style/TextValue"
            android:id="@+id/accelerometer_x_value"
            android:text="@string/default_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            app:layout_constraintStart_toEndOf="@id/accelerometer_x_label"
            app:layout_constraintTop_toTopOf="@id/accelerometer_x_label"/>

        <TextView
            style="@style/TextLabel"
            android:id="@+id/accelerometer_y_label"
            android:text="@string/y"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/accelerometer_z_label"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            style="@style/TextValue"
            android:id="@+id/accelerometer_y_value"
            android:text="@string/default_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            app:layout_constraintStart_toEndOf="@id/accelerometer_y_label"
            app:layout_constraintTop_toTopOf="@id/accelerometer_y_label"/>

        <TextView
            style="@style/TextLabel"
            android:id="@+id/accelerometer_z_label"
            android:text="@string/z"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/hr_title"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            style="@style/TextValue"
            android:id="@+id/accelerometer_z_value"
            android:text="@string/default_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            app:layout_constraintStart_toEndOf="@id/accelerometer_z_label"
            app:layout_constraintTop_toTopOf="@id/accelerometer_z_label"/>

        <!-- GYRO -->
        <TextView
            android:id="@+id/gyro_title"
            style="@style/TextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="68dp"
            android:text="@string/gyroscope"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/acc_title" />

        <TextView
            style="@style/TextLabel"
            android:id="@+id/gyroscope_x_label"
            android:text="@string/x"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/gyro_title"
            app:layout_constraintStart_toStartOf="@id/gyro_title"/>

        <TextView
            style="@style/TextValue"
            android:id="@+id/gyroscope_x_value"
            android:text="@string/default_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            app:layout_constraintStart_toEndOf="@id/gyroscope_x_label"
            app:layout_constraintTop_toTopOf="@id/gyroscope_x_label"/>

        <TextView
            style="@style/TextLabel"
            android:id="@+id/gyroscope_y_label"
            android:text="@string/y"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/gyroscope_x_label"
            app:layout_constraintStart_toStartOf="@id/gyro_title"/>

        <TextView
            style="@style/TextValue"
            android:id="@+id/gyroscope_y_value"
            android:text="@string/default_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            app:layout_constraintStart_toEndOf="@id/gyroscope_y_label"
            app:layout_constraintTop_toTopOf="@id/gyroscope_y_label"/>

        <TextView
            style="@style/TextLabel"
            android:id="@+id/gyroscope_z_label"
            android:text="@string/z"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/gyroscope_y_label"
            app:layout_constraintStart_toStartOf="@id/gyro_title"/>

        <TextView
            style="@style/TextValue"
            android:id="@+id/gyroscope_z_value"
            android:text="@string/default_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            app:layout_constraintStart_toEndOf="@id/gyroscope_z_label"
            app:layout_constraintTop_toTopOf="@id/gyroscope_z_label"/>

        <!-- HR -->
        <TextView
            android:id="@+id/hr_title"
            style="@style/TextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hr_ext"
            app:layout_constraintTop_toBottomOf="@id/accelerometer_z_label"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/hr_label"
            style="@style/TextLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hr"
            app:layout_constraintTop_toBottomOf="@id/hr_title"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/hr_value"
            style="@style/TextValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_70"
            app:layout_constraintTop_toTopOf="@id/hr_label"
            app:layout_constraintStart_toEndOf="@id/hr_label"/>

        <!-- LOCATION -->

        <TextView
            android:id="@+id/location_title"
            style="@style/TextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="108dp"
            android:text="@string/location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hr_label" />

        <TextView
            style="@style/TextLabel"
            android:id="@+id/latitude_label"
            android:text="@string/latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/longitude_label"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            style="@style/TextValue"
            android:id="@+id/latitude_value"
            android:text="@string/default_0"
            android:layout_marginStart="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/latitude_label"
            app:layout_constraintTop_toTopOf="@id/latitude_label" />

        <TextView
            style="@style/TextLabel"
            android:id="@+id/longitude_label"
            android:text="@string/longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/country_label"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            style="@style/TextValue"
            android:id="@+id/longitude_value"
            android:text="@string/default_0"
            android:layout_marginStart="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/longitude_label"
            app:layout_constraintTop_toTopOf="@id/longitude_label"/>

        <TextView
            style="@style/TextLabel"
            android:id="@+id/country_label"
            android:text="@string/country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/city_label"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            style="@style/TextValue"
            android:id="@+id/country_value"
            android:text="@string/default_no_value"
            android:layout_marginStart="48dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/country_label"
            app:layout_constraintTop_toTopOf="@id/country_label" />

        <TextView
            style="@style/TextLabel"
            android:id="@+id/city_label"
            android:text="@string/city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/street_label"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            style="@style/TextValue"
            android:id="@+id/city_value"
            android:text="@string/default_no_value"
            android:layout_marginStart="32dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/city_label"
            app:layout_constraintTop_toTopOf="@id/city_label" />

        <TextView
            style="@style/TextLabel"
            android:id="@+id/street_label"
            android:text="@string/street"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/city_label"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            style="@style/TextValue"
            android:id="@+id/street_value"
            android:text="@string/default_no_value"
            android:layout_marginStart="52dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/url_container"
            app:layout_constraintStart_toEndOf="@id/street_label"
            app:layout_constraintTop_toTopOf="@id/street_label"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>